test/field/set_on_num.lox
123.foo = "value" // error: only instances have fields
